[package]
name = "gameboy"
version = "0.1.0"
authors = ["Nathan Herzing <nherzing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
structopt = { version = "0.2", default-features = false }
sdl2 = "0.32"
samplerate = "0.2.1"
